--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,7 @@ notebook==6.4.10
 notebook-shim==0.1.0
 numpy==1.22.3
 oauthlib==3.2.0
+opencv-python==4.5.5.64
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.2
@@ -87,6 +88,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycocotools==2.0.4
 pycparser==2.21
 Pygments==2.11.2
 pyparsing==3.0.8
@@ -118,6 +120,7 @@ tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.1.0
 tinycss2==1.1.1
 tornado==6.1
+tqdm==4.64.0
 traitlets==5.1.1
 typing_extensions==4.1.1
 urllib3==1.26.9
