--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ algorithm/models/centernet_resnet101_v1_fpn_512x512_coco17_tpu-8/saved_model/var
 algorithm/models/centernet_resnet101_v1_fpn_512x512_coco17_tpu-8/checkpoint/ckpt-0.data-00000-of-00001
 algorithm/main.py
 algorithm/notebooks/models/
+algorithm/models/shapes_model-2.h5
+algorithm/models/shapes_model-1.h5
