--- a/requirements.txt
+++ b/requirements.txt
@@ -109,10 +109,11 @@ sklearn==0.0
 sniffio==1.2.0
 soupsieve==2.3.2
 stack-data==0.2.0
-tensorflow==2.3.0
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
+tensorflow-macos==2.8.0
+tensorflow-metal==0.4.0
 termcolor==1.1.0
 terminado==0.13.3
 tf-estimator-nightly==2.8.0.dev2021122109
